complete js paint. add range, paint&fill mode, and save button operation

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
         />
       </div>
       <div class="controls__btns">
-        <button class="jsMode">Fill</button>
-        <button class="jsSave">Save</button>
+        <button id="jsMode">Fill</button>
+        <button id="jsSave">Save</button>
       </div>
       <div class="controls__colors" id="jsColor">
         <div
